src/styles/overlay.css
.image-original-button {
    position: absolute;
    background-color: rgba(0, 0, 0, 0.3);
    color: white;
    padding: 10px;
    border-radius: 8px;
    user-select: none;
    border: 2px solid white;
    font-size: 14px;
    font-family: 'Pretendard Variable', 'Noto Sans KR', sans-serif;
    text-align: center;
    display: inline-flex;
    align-items: center;
    z-index: 9999;
}

.image-original-button:hover {
    background-color: rgba(0, 0, 0, 0.6);
}

.translate-overlay {
    position: absolute;
    background-color: rgba(0, 0, 0, 0.5);
    z-index: 9999;
    color: black;
    background-color: white;
    padding: 10px;
    border: 1px solid black;
    border-radius: 8px;
    overflow: auto;
    max-width: 500px;
    max-height: 500px;
    cursor: pointer;
    font-size: 14px;
    font-family: 'Pretendard Variable', 'Noto Sans KR', sans-serif;
}

.translate-overlay .translate-overlay-header {
    display: flex;
    justify-content: space-between;
    align-items: center;
    margin-bottom: 10px;
    user-select: none;
}

.translate-overlay .translate-overlay-header img {
    width: 24px;
    height: 24px;
    margin-right: 10px;
}

.translate-overlay button {
    color: #333333;
    background-color: rgba(51, 51, 51, 0.05);
    border-radius: 8px;
    border-width: 0;
    cursor: pointer;
    display: inline-block;
    font-size: 14px;
    line-height: 20px;
    list-style: none;
    margin: 0;
    padding: 6px 8px;
    text-align: center;
    transition: all 200ms;
    vertical-align: baseline;
    white-space: nowrap;
    user-select: none;
    touch-action: manipulation;
}

.translate-overlay button:hover {
    background-color: rgba(51, 51, 51, 0.1);
}

@media (prefers-color-scheme: dark) {
    .translate-overlay {
        background-color: #333333;
        color: white;
    }

    .translate-overlay button {
        background-color: rgba(255, 255, 255, 0.05);
        color: white;
    }

    .translate-overlay button:hover {
        background-color: rgba(255, 255, 255, 0.1);
    }
}

